<resources>
    <string name="app_name">Asset Management</string>

    <string name="title_activity_transactions">Transactions</string>


    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_transaction">Add Transaction</string>

    <string name="ok">OK</string>
    <string name="delete_confirmation">Delete Transaction?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_button_description">Delete Button</string>
    <string name="validation_dialog_message">Please fill correctly all the fields, before proceed.</string>

    <string name="transactions_title">Transactions</string>
    <string name="add_transaction_title">Add Transaction</string>
    <string name="edit_transaction_title">Edit Transaction</string>
    <string name="transaction_details_title">Transaction Details</string>
    <string name="edit_action">Edit</string>
    <string name="delete_action">Delete</string>

    <string name="update">Update</string>
    <string name="save">Save</string>


    <string name="asset_name">Asset Name</string>
    <string name="asset_type">Asset Type</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="currency">Currency</string>
    <string name="date">Date</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="no_transactions">No transactions available.</string>
    <string name="stock">Stock</string>
    <string name="crypto">Cryptocurrency</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="dividend">Dividend</string>

    <string name="search_transactions_hint">Search Transactions</string>
    <string name="cancel_add_transaction">Do you want to cancel the add of the transaction?</string>
    <string name="cancel_edit_transaction">Do you want to cancel the edit of the transaction?</string>
    <string name="for_keyword">for</string>
    <string name="date_label">Date:</string>
    <string name="asset_type_label">Asset Type:</string>

    <string name="search_hint">Search</string>
    <string name="search_list_title">Select Item</string>
    <string name="select">Select</string>
    <string name="asset">Asset</string>
    <string name="price_currency">Price Currency</string>
</resources>